updated with local runs

--- a/Workflows/Interactive_Simple_Kriging.ipynb
+++ b/Workflows/Interactive_Simple_Kriging.ipynb
@@ -461,7 +461,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b773e003bfe48598ce799c7d242c5cc",
+       "model_id": "fdb7801966d145498cbe2eeb866af992",
        "version_major": 2,
        "version_minor": 0
       },
@@ -475,12 +475,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aadc856533aa4bcda5421dd55cee6d80",
+       "model_id": "f63098dbe5fb423ba1c7a56f1ef9a7a3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output()"
+       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<Figure size 640x480 with 3 Axes>', 'i…"
       ]
      },
      "metadata": {},
@@ -554,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "geostats",
    "language": "python",
    "name": "python3"
   },
@@ -568,7 +568,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a76fd044e7a93aaf01731fccb4581dafbb3b76d9ce5c16ae2cd53a9e7d983d05"
+   }
   }
  },
  "nbformat": 4,
